--- a/dice.css
+++ b/dice.css
@@ -1,45 +1,25 @@
 #container-top{
-    
-    height:60%;
+    /* border: 1px solid black; */
+    height:300px;
     width: 60%;
     text-align: center;
     margin: auto;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 #container-top >div{
     display: inline-block;
     align-items: center;
     margin: 10px;
 }
-h1 {
-    margin: 30px;
-    font-family: "Lobster", cursive;
-    text-shadow: 5px 0 #232931;
-    font-size: 4.5rem;
-   color: green;
-    text-align: center;
-}
-p{
-    font-size: 1.5rem;
-    font-family: "Indie Flower",cursive;
+.butn{
+   border: none;
+   color:white;
+   background-color: aqua;
+   width: 20%;
+   padding: 10px;
+
 }
 img{
-    width: 100%;
-}
-#container-bottom1{
-    padding-top: 30px;
-    text-align: center;
-}
-#roll {
-    background: #4ecca3;
-    font-family: "Indie Flower", cursive;
-    border-radius: 7px;
-    color: #ffff;
-    font-size: 30px;
-    padding: 16px 25px 16px 25px;
-    text-decoration: none;
-    
-}
-#roll:hover {
-    background: #232931;
-    text-decoration: none;
+    width: 60px;
+    height: 60px;
 }
